<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    tools:context="com.giladsagi.privateteacher.SplashActivity"
    style="@style/NewDialog"
    android:background="@drawable/green_bg_search">

    <TextView
        android:id="@+id/teacher_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="70dp"
        android:text="חפש מורים"
        android:textColor="@color/white"
        android:textSize="25dp" >
    </TextView>

    <ImageButton
        android:id="@+id/exit"
        style="@style/Base.Widget.AppCompat.ActionButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:textColor="@color/white"
        android:background="@drawable/x"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/ChooseArea"
        style="@style/Base.Widget.AppCompat.ActionButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/teacher_search"
        android:layout_marginTop="35dp"
        android:layout_marginRight="4dp"
        android:textColor="@color/white"
        android:text="@string/str_c_city"
        android:gravity="right|center"
        android:background="@drawable/button_border_main"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ChooseField"
        style="@style/Base.Widget.AppCompat.ActionButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/str_c_subject"
        android:layout_alignParentRight="true"
        android:layout_marginRight="4dp"
        android:textSize="20sp"
        android:background="@drawable/button_border_main"
        android:textColor="@color/white"
        android:layout_below="@+id/ChooseArea"
        android:gravity="right|center"
        android:typeface="serif" />


    <ImageButton
        android:id="@+id/imAddSubject"
        style="@style/Base.Widget.AppCompat.ActionButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:contentDescription="@string/b_search"
        android:background="@drawable/search_icon2"
        android:layout_alignTop="@+id/ChooseArea"
        android:layout_toLeftOf="@+id/ChooseArea"
        android:layout_toStartOf="@+id/ChooseArea" />

</RelativeLayout>