<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#20FFFFFF"
        card_view:cardElevation="3dp"
        android:id="@+id/cardView">

        <RelativeLayout
            android:id="@+id/item_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageViewTeacher"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/profile"
        android:scaleType="center" />


            
    <ImageView
        android:id="@+id/rating_star"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/rating_star"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imageViewTeacher"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/teacher_raitings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="true"
        android:maxLength="7"
        android:text="raiting"
        android:textStyle="bold"
        android:layout_alignLeft="@id/rating_star"
        android:layout_alignTop="@id/rating_star"
        android:layout_alignRight="@id/rating_star"
        android:layout_alignBottom="@id/rating_star"
        android:textSize="11sp"
        android:gravity="center"
        android:layout_below="@id/imageViewTeacher" />


    <TextView
        android:id="@+id/teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingRight="80dp"
        android:layout_alignParentTop="true"
        android:text="full name"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white" />



    <TextView
        android:id="@+id/teacher_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="price"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_alignBaseline="@+id/teacher_raitings"
        android:layout_alignBottom="@+id/teacher_raitings"
        android:layout_alignLeft="@+id/textFields"
        android:layout_alignStart="@+id/textFields"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/textAreas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacher_name"
        android:layout_toLeftOf="@id/imageViewTeacher"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:text="@string/Areas" />

    <TextView
        android:id="@+id/textAreasList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAreas"
        android:layout_toLeftOf="@id/imageViewTeacher"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="11dp"
        android:text="@string/AreasList" />


    <TextView
        android:id="@+id/textFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacher_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="@string/Fields" />

    <TextView
        android:id="@+id/textFieldsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFields"
        android:layout_alignRight="@+id/textFields"
        android:textColor="@color/white"
        android:textSize="11dp"
        android:text="@string/FieldsList" />



    <TextView
        android:id="@+id/nis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ש&quot;ח לשעה"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="8dp"
        android:gravity="center"
        android:layout_below="@+id/teacher_price"
        android:layout_alignRight="@+id/teacher_price"
        android:layout_alignLeft="@+id/teacher_price" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_height="2dp"
        android:layout_below="@+id/imageViewTeacher"
        android:layout_centerHorizontal="true"
        android:background="@drawable/under_line" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>